@@ -1,21 +1,0 @@
-#
-# need sybase-to-postgres conversion
-#
-
-mgd/ALL_CellLineProvider.sql
-mgd/BIB_NoAbstract.sql
-mgd/GXD_ImageCheck.sql
-mgd/MRK_Withdrawn.sql
-mgd/PRB_Strain_NoAlleles1.sql
-mgd/PRB_Strain_SingleNoAlleles1.sql
-mgd/PRB_Strain_SingleNoAlleles2.sql
-mgd/PRB_StrainByDate.sql
-
-weekly/GXD_Triage.sql
-weekly/MLD_Triage.sql
-weekly/PHENO_ImageCheck.sql
-weekly/PRB_StrainJAX4.sql
-weekly/PRB_StrainJAX5.sql
-weekly/PRB_StrainJAX7.sql
-weekly/PRB_StrainJAX8.sql
-weekly/PRB_StrainNonStd.sql
